recruiting class pages

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -2,6 +2,11 @@
 	background-position: center
 	background-size: cover
 	height: 400px
+
+.hero-no-img
+	background-position: center
+	background-size: cover
+
 #hero
 	background-position: center
 	background-size: cover
@@ -13,6 +18,8 @@
 .site-logo
 	width: 90%
 	max-width: $logo-width
+	padding-top: 6rem
+	padding-bottom: 4rem
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
