--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,1 +1,1 @@
-{{site.data.settings.emma.form}}
+<iframe src="https://signup.e2ma.net/signup/1866261/1808039/" width="510" height="650" frameborder="0"></iframe>
