--- a/_layouts/recruiting.html
+++ b/_layouts/recruiting.html
@@ -8,7 +8,7 @@
 			{% include audit.html %}
 		{% endif %}
 		{% include navigation.html %}
-		{% include header.html %}
+		{% include recruiting-header.html %}
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-10 col-lg-offset-1">
