--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -191,7 +191,7 @@
 	a
 		color: white
 		&:hover
-			color: $brand-light
+			color: $brand-dark
 .post-share
 	text-align: center
 	padding-bottom: 0px
@@ -297,3 +297,4 @@
 	font-size: 18px
 	text-align: center
 	margin-bottom: 2rem
+	font-weight: bold
