--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,6 +1,12 @@
 <div class="photo-cta">
+  <img src="/img/cta-images/job-openings.png" class="photo-cta-container"/>
+  <div class="cta-button"><a href="/">Apply Now   <i class="fa fa-angle-double-right"></i></a></div>
+</div>
+
+
+<div class="photo-cta">
   <img src="/img/cta-images/join_our_team.png" class="photo-cta-container"/>
-  <div class="cta-button"><a href="/join-our-team">Apply Now   <i class="fa fa-angle-double-right"></i></a></div>
+  <div class="cta-button"><a href="/join-our-team">Information   <i class="fa fa-angle-double-right"></i></a></div>
 </div>
 
 
