--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-7 col-md-7 col-lg-offset-1">
-					<h3 class="site-title">Our Mission is to Coach, Mentor and Educate agents on how to build a better business and sell more houses.</h3>
+					<h3 class="site-title">Our mission is to inspire our real estate colleagues to have more fun in their career and in life.</h3>
 					{{ content }}
 				</div>
 
