--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,6 +1,6 @@
 <div class="photo-cta">
   <img src="/img/cta-images/job-openings.png" class="photo-cta-container"/>
-  <div class="cta-button"><a href="https://www.longislandhomeslist.com/job-openings/">Apply Now   <i class="fa fa-angle-double-right"></i></a></div>
+  <div class="cta-button"><a href="https://contacts.byreferralonly.com/Form.aspx?Key=E69E228828AB95BB507E1A5EC0E7DD84">Apply Now   <i class="fa fa-angle-double-right"></i></a></div>
 </div>
 
 
